--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^16.4.7",
     "express": "^4.16.3",
     "express-graphql": "^0.12.0",
     "express-validator": "^5.3.0",
